// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`currencies is falsy 1`] = `""`;

exports[`shallow render 1`] = `
<GenericError
  t={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-100 layout-row layout-align-start-center"
    >
      <TextHeading
        color="black"
        fontWeight="normal"
        size={3}
        text="Currency Center"
      />
    </div>
    <div
      className="flex-100 layout-row layout-align-center-start layout-wrap"
    >
      <div
        className="flex-80 layout-row layout-align-center-center layout-wrap"
      >
        <div
          className="flex-90 layout-row layout-align-center-start layout-wrap"
        >
          <CurrencyViewTile
            baseCurrency={
              Object {
                "key": "FOO",
                "rate": 1,
              }
            }
            calculator={Object {}}
            convertValue={[Function]}
            currency={
              Object {
                "key": "BAR",
                "rate": 0.5,
              }
            }
            results={Object {}}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
          <CurrencyViewTile
            baseCurrency={
              Object {
                "key": "FOO",
                "rate": 1,
              }
            }
            calculator={Object {}}
            convertValue={[Function]}
            currency={
              Object {
                "key": "BAZ",
                "rate": 2,
              }
            }
            results={Object {}}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-20 layout-row layout-wrap layout-align-center-start"
      >
        <div
          className="flex-100 layout-row layout-align-space-around-center layout-wrap input_box"
        >
          <input
            className="flex-90"
            onChange={[Function]}
            placeholder="Search Currencies"
            type="text"
            value=""
          />
        </div>
        <div
          className="flex-90 layout-row layout-align-space-between-start"
        >
          <div
            className="flex-90 layout-row layout-align-space-between-center"
          >
            <p
              className="flex-none"
            >
              Live Rates
            </p>
            <div
              className="flex-5"
            />
            <Toggle
              checked={true}
              className="flex-none"
              icons={
                Object {
                  "checked": <Unknown />,
                  "unchecked": <Unknown />,
                }
              }
              id="rateToggle"
              name="rateToggle"
              onChange={[Function]}
            />
            <div
              className="flex-5"
            />
            <p
              className="flex-none"
            >
              Set Rates
            </p>
          </div>
        </div>
        <div
          className="flex-90 layout-row layout-align-space-between-start"
        >
          <p
            className="flex-none"
          >
            Base Currency
          </p>
          <p
            className="flex-none"
          >
            FOO
          </p>
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <NamedSelect
            className="flex-100"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": "EUR",
                  "value": "EUR",
                },
                Object {
                  "label": "AUD",
                  "value": "AUD",
                },
                Object {
                  "label": "BGN",
                  "value": "BGN",
                },
                Object {
                  "label": "BRL",
                  "value": "BRL",
                },
                Object {
                  "label": "CAD",
                  "value": "CAD",
                },
                Object {
                  "label": "CHF",
                  "value": "CHF",
                },
                Object {
                  "label": "CNY",
                  "value": "CNY",
                },
                Object {
                  "label": "CZK",
                  "value": "CZK",
                },
                Object {
                  "label": "DKK",
                  "value": "DKK",
                },
                Object {
                  "label": "GBP",
                  "value": "GBP",
                },
                Object {
                  "label": "HKD",
                  "value": "HKD",
                },
                Object {
                  "label": "HRK",
                  "value": "HRK",
                },
                Object {
                  "label": "HUF",
                  "value": "HUF",
                },
                Object {
                  "label": "IDR",
                  "value": "IDR",
                },
                Object {
                  "label": "ILS",
                  "value": "ILS",
                },
                Object {
                  "label": "INR",
                  "value": "INR",
                },
                Object {
                  "label": "JPY",
                  "value": "JPY",
                },
                Object {
                  "label": "KRW",
                  "value": "KRW",
                },
                Object {
                  "label": "MXN",
                  "value": "MXN",
                },
                Object {
                  "label": "MYR",
                  "value": "MYR",
                },
                Object {
                  "label": "NOK",
                  "value": "NOK",
                },
                Object {
                  "label": "NZD",
                  "value": "NZD",
                },
                Object {
                  "label": "PHP",
                  "value": "PHP",
                },
                Object {
                  "label": "PLN",
                  "value": "PLN",
                },
                Object {
                  "label": "RON",
                  "value": "RON",
                },
                Object {
                  "label": "RUB",
                  "value": "RUB",
                },
                Object {
                  "label": "SEK",
                  "value": "SEK",
                },
                Object {
                  "label": "SGD",
                  "value": "SGD",
                },
                Object {
                  "label": "THB",
                  "value": "THB",
                },
                Object {
                  "label": "TRY",
                  "value": "TRY",
                },
                Object {
                  "label": "USD",
                  "value": "USD",
                },
                Object {
                  "label": "ZAR",
                  "value": "ZAR",
                },
              ]
            }
            value={
              Object {
                "label": "FOO",
                "value": "FOO",
              }
            }
          />
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
          style={
            Object {
              "marginTop": "10px",
            }
          }
        >
          <SquareButton
            active={false}
            back={false}
            border={false}
            className="flex-90"
            classNames=""
            disabled={false}
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            size="small"
            text="Edit Rates"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
           
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
        />
      </div>
    </div>
    <style>
      
      .react-toggle--checked .react-toggle-track {
        background: 
          undefined !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: undefined !important;
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
    </style>
  </div>
</GenericError>
`;

exports[`state.editBool is true 1`] = `
<GenericError
  t={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-100 layout-row layout-align-start-center"
    >
      <TextHeading
        color="black"
        fontWeight="normal"
        size={3}
        text="Currency Center"
      />
    </div>
    <div
      className="flex-100 layout-row layout-align-center-start layout-wrap"
    >
      <div
        className="flex-80 layout-row layout-align-center-center layout-wrap"
      >
        <div
          className="flex-90 layout-row layout-align-center-start layout-wrap"
        >
          <CurrencySetTile
            currency={
              Object {
                "key": "BAR",
                "rate": 0.5,
              }
            }
            newValues={Object {}}
            saveChanges={[Function]}
            setValue={[Function]}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
          <CurrencySetTile
            currency={
              Object {
                "key": "BAZ",
                "rate": 2,
              }
            }
            newValues={Object {}}
            saveChanges={[Function]}
            setValue={[Function]}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-20 layout-row layout-wrap layout-align-center-start"
      >
        <div
          className="flex-100 layout-row layout-align-space-around-center layout-wrap input_box"
        >
          <input
            className="flex-90"
            onChange={[Function]}
            placeholder="Search Currencies"
            type="text"
            value=""
          />
        </div>
        <div
          className="flex-90 layout-row layout-align-space-between-start"
        >
          <div
            className="flex-90 layout-row layout-align-space-between-center"
          >
            <p
              className="flex-none"
            >
              Live Rates
            </p>
            <div
              className="flex-5"
            />
            <Toggle
              checked={true}
              className="flex-none"
              icons={
                Object {
                  "checked": <Unknown />,
                  "unchecked": <Unknown />,
                }
              }
              id="rateToggle"
              name="rateToggle"
              onChange={[Function]}
            />
            <div
              className="flex-5"
            />
            <p
              className="flex-none"
            >
              Set Rates
            </p>
          </div>
        </div>
        <div
          className="flex-90 layout-row layout-align-space-between-start"
        >
          <p
            className="flex-none"
          >
            Base Currency
          </p>
          <p
            className="flex-none"
          >
            FOO
          </p>
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <NamedSelect
            className="flex-100"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": "EUR",
                  "value": "EUR",
                },
                Object {
                  "label": "AUD",
                  "value": "AUD",
                },
                Object {
                  "label": "BGN",
                  "value": "BGN",
                },
                Object {
                  "label": "BRL",
                  "value": "BRL",
                },
                Object {
                  "label": "CAD",
                  "value": "CAD",
                },
                Object {
                  "label": "CHF",
                  "value": "CHF",
                },
                Object {
                  "label": "CNY",
                  "value": "CNY",
                },
                Object {
                  "label": "CZK",
                  "value": "CZK",
                },
                Object {
                  "label": "DKK",
                  "value": "DKK",
                },
                Object {
                  "label": "GBP",
                  "value": "GBP",
                },
                Object {
                  "label": "HKD",
                  "value": "HKD",
                },
                Object {
                  "label": "HRK",
                  "value": "HRK",
                },
                Object {
                  "label": "HUF",
                  "value": "HUF",
                },
                Object {
                  "label": "IDR",
                  "value": "IDR",
                },
                Object {
                  "label": "ILS",
                  "value": "ILS",
                },
                Object {
                  "label": "INR",
                  "value": "INR",
                },
                Object {
                  "label": "JPY",
                  "value": "JPY",
                },
                Object {
                  "label": "KRW",
                  "value": "KRW",
                },
                Object {
                  "label": "MXN",
                  "value": "MXN",
                },
                Object {
                  "label": "MYR",
                  "value": "MYR",
                },
                Object {
                  "label": "NOK",
                  "value": "NOK",
                },
                Object {
                  "label": "NZD",
                  "value": "NZD",
                },
                Object {
                  "label": "PHP",
                  "value": "PHP",
                },
                Object {
                  "label": "PLN",
                  "value": "PLN",
                },
                Object {
                  "label": "RON",
                  "value": "RON",
                },
                Object {
                  "label": "RUB",
                  "value": "RUB",
                },
                Object {
                  "label": "SEK",
                  "value": "SEK",
                },
                Object {
                  "label": "SGD",
                  "value": "SGD",
                },
                Object {
                  "label": "THB",
                  "value": "THB",
                },
                Object {
                  "label": "TRY",
                  "value": "TRY",
                },
                Object {
                  "label": "USD",
                  "value": "USD",
                },
                Object {
                  "label": "ZAR",
                  "value": "ZAR",
                },
              ]
            }
            value={
              Object {
                "label": "FOO",
                "value": "FOO",
              }
            }
          />
        </div>
        <div
          className="flex-100 layout-row layout-wrap layout-align-center-center"
          style={
            Object {
              "marginTop": "10px",
            }
          }
        >
          <SquareButton
            active={false}
            back={false}
            border={false}
            className="flex-90"
            classNames=""
            disabled={false}
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            size="small"
            text="Save Rates"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
          <SquareButton
            active={false}
            back={false}
            border={false}
            className="flex-90"
            classNames=""
            disabled={false}
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            size="small"
            text="Cancel Edit"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
        />
      </div>
    </div>
    <style>
      
      .react-toggle--checked .react-toggle-track {
        background: 
          undefined !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: undefined !important;
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
    </style>
  </div>
</GenericError>
`;

exports[`state.rateBool is false 1`] = `
<GenericError
  t={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-100 layout-row layout-align-start-center"
    >
      <TextHeading
        color="black"
        fontWeight="normal"
        size={3}
        text="Currency Center"
      />
    </div>
    <div
      className="flex-100 layout-row layout-align-center-start layout-wrap"
    >
      <div
        className="flex-80 layout-row layout-align-center-center layout-wrap"
      >
        <div
          className="flex-90 layout-row layout-align-center-start layout-wrap"
        >
          <CurrencyViewTile
            baseCurrency={
              Object {
                "key": "FOO",
                "rate": 1,
              }
            }
            calculator={Object {}}
            convertValue={[Function]}
            currency={
              Object {
                "key": "BAR",
                "rate": 0.5,
              }
            }
            results={Object {}}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
          <CurrencyViewTile
            baseCurrency={
              Object {
                "key": "FOO",
                "rate": 1,
              }
            }
            calculator={Object {}}
            convertValue={[Function]}
            currency={
              Object {
                "key": "BAZ",
                "rate": 2,
              }
            }
            results={Object {}}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-20 layout-row layout-wrap layout-align-center-start"
      >
        <div
          className="flex-100 layout-row layout-align-space-around-center layout-wrap input_box"
        >
          <input
            className="flex-90"
            onChange={[Function]}
            placeholder="Search Currencies"
            type="text"
            value=""
          />
        </div>
        <div
          className="flex-90 layout-row layout-align-space-between-start"
        >
          <div
            className="flex-90 layout-row layout-align-space-between-center"
          >
            <p
              className="flex-none"
            >
              Live Rates
            </p>
            <div
              className="flex-5"
            />
            <Toggle
              checked={false}
              className="flex-none"
              icons={
                Object {
                  "checked": <Unknown />,
                  "unchecked": <Unknown />,
                }
              }
              id="rateToggle"
              name="rateToggle"
              onChange={[Function]}
            />
            <div
              className="flex-5"
            />
            <p
              className="flex-none"
            >
              Set Rates
            </p>
          </div>
        </div>
        <div
          className="flex-90 layout-row layout-align-space-between-start"
        >
          <p
            className="flex-none"
          >
            Base Currency
          </p>
          <p
            className="flex-none"
          >
            FOO
          </p>
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
        >
          <NamedSelect
            className="flex-100"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": "EUR",
                  "value": "EUR",
                },
                Object {
                  "label": "AUD",
                  "value": "AUD",
                },
                Object {
                  "label": "BGN",
                  "value": "BGN",
                },
                Object {
                  "label": "BRL",
                  "value": "BRL",
                },
                Object {
                  "label": "CAD",
                  "value": "CAD",
                },
                Object {
                  "label": "CHF",
                  "value": "CHF",
                },
                Object {
                  "label": "CNY",
                  "value": "CNY",
                },
                Object {
                  "label": "CZK",
                  "value": "CZK",
                },
                Object {
                  "label": "DKK",
                  "value": "DKK",
                },
                Object {
                  "label": "GBP",
                  "value": "GBP",
                },
                Object {
                  "label": "HKD",
                  "value": "HKD",
                },
                Object {
                  "label": "HRK",
                  "value": "HRK",
                },
                Object {
                  "label": "HUF",
                  "value": "HUF",
                },
                Object {
                  "label": "IDR",
                  "value": "IDR",
                },
                Object {
                  "label": "ILS",
                  "value": "ILS",
                },
                Object {
                  "label": "INR",
                  "value": "INR",
                },
                Object {
                  "label": "JPY",
                  "value": "JPY",
                },
                Object {
                  "label": "KRW",
                  "value": "KRW",
                },
                Object {
                  "label": "MXN",
                  "value": "MXN",
                },
                Object {
                  "label": "MYR",
                  "value": "MYR",
                },
                Object {
                  "label": "NOK",
                  "value": "NOK",
                },
                Object {
                  "label": "NZD",
                  "value": "NZD",
                },
                Object {
                  "label": "PHP",
                  "value": "PHP",
                },
                Object {
                  "label": "PLN",
                  "value": "PLN",
                },
                Object {
                  "label": "RON",
                  "value": "RON",
                },
                Object {
                  "label": "RUB",
                  "value": "RUB",
                },
                Object {
                  "label": "SEK",
                  "value": "SEK",
                },
                Object {
                  "label": "SGD",
                  "value": "SGD",
                },
                Object {
                  "label": "THB",
                  "value": "THB",
                },
                Object {
                  "label": "TRY",
                  "value": "TRY",
                },
                Object {
                  "label": "USD",
                  "value": "USD",
                },
                Object {
                  "label": "ZAR",
                  "value": "ZAR",
                },
              ]
            }
            value={
              Object {
                "label": "FOO",
                "value": "FOO",
              }
            }
          />
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
          style={
            Object {
              "marginTop": "10px",
            }
          }
        >
          <SquareButton
            active={false}
            back={false}
            border={false}
            className="flex-90"
            classNames=""
            disabled={false}
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            size="small"
            text="Refresh Rates"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-100 layout-row layout-align-center-center"
        />
      </div>
    </div>
    <style>
      
      .react-toggle--checked .react-toggle-track {
        background: 
          undefined !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: undefined !important;
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
    </style>
  </div>
</GenericError>
`;
